# TvSorterV2

./: .gitignore  Cargo.toml  DEV.md  README.md
.github/workflows/: release-desktop.yml
docs/: DEPLOYMENT.md  PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: FolderPicker.tsx  ImportsContext.tsx  Progress.tsx  Select.tsx
frontend/src/pages/: Browse.tsx  History.tsx  Imports.tsx  Library.tsx  Match.tsx  Results.tsx  Settings.tsx
scripts/: build-app.sh  build-desktop.sh  create-proxmox-lxc.sh  tvsorter-access.sh  update-tvsorter.sh
src/: assets.rs  config.rs  db.rs  error.rs  ffprobe.rs  filesystem.rs  formatting.rs  importer.rs  jobs.rs  lib.rs  library.rs  main.rs  models.rs  naming.rs  parser.rs  providers.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: mod.rs
