[package]
name = "tvsorter"
version = "0.1.0"
edition = "2021"
description = "LAN-only TV, anime, and film hardlink/copy sorter (Rust backend)"
license = "MIT"

[[bin]]
name = "tvsorter"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
once_cell = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
filetime = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 2
lto = "thin"
